--- a/runtime-discovery/gateway/src/main/resources/application.yml
+++ b/runtime-discovery/gateway/src/main/resources/application.yml
@@ -55,16 +55,17 @@ spring:
             - HEAD
     security:    oauth2:      resourceserver:        jwt:          issuer-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/
       client:        registration:
-          client:
+          keycloak:
             client-id: loginapp
             client-secret: e729b79d-4280-4ce4-bcf3-4fd6321bc491
-            scope: openid
-            provider: keycloak
-            authorization-grant-type: client_credentials        provider:          keycloak:
+            client-name: Keycloak
+            scope: 
+              -openid
+            authorization-grant-type: authorization_code        provider:          keycloak:
             authorization-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/auth
-            token-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/token/introspect
+            token-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/token
             user-info-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/userinfo
-            jwk-set-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/
+            jwk-set-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/certs
             user-info-authentication-method: header
             
             
