--- a/runtime-discovery/gateway/src/main/resources/application.yml
+++ b/runtime-discovery/gateway/src/main/resources/application.yml
@@ -55,12 +55,11 @@ spring:
             - HEAD
     security:    oauth2:      resourceserver:        jwt:          issuer-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/
       client:        registration:
-          keycloak:
+          client:
             client-id: loginapp
             client-secret: e729b79d-4280-4ce4-bcf3-4fd6321bc491
-            client-name: Keycloak
-            scope: 
-              -openid
+            scope: openid
+            provider: keycloak
             authorization-grant-type: authorization_code        provider:          keycloak:
             authorization-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/auth
             token-uri: http://85.146.20.136:8080/auth/realms/DreamBikeKeycloak/protocol/openid-connect/token
