--- a/runtime-discovery/docker-compose.yml
+++ b/runtime-discovery/docker-compose.yml
@@ -1,25 +1,11 @@
 version: '3'
 
-#volumes:
-#  mysql_data:
-#    driver: local
-
 services:
   registry:
     image: dreambike/registry:devrick
     container_name: registry
     expose: 
       - "8761"
-#  greeting-service:
-#    image: dreambike-service:latest
-#    container_name: greeting-service
-#    expose: 
-#      - "8762"
-#    depends_on: 
-#      - "registry"
-#    environment:
-#      - JAVA_OPTS=
-#        -DEUREKA_SERVER=http://registry:8761/eureka
   gateway:
     image: dreambike/gateway:devrick
     container_name: gateway
@@ -44,6 +30,13 @@ services:
       - "8764"
     depends_on:
       - "registry"
+  docking:
+    image: dreambike/docking:devrick
+    container_name: docking2
+    expose:
+      - "8766"
+    depends_on:
+      - "registry"
   bikedocking:
     image: dreambike/bikedocking:devrick
     container_name: bikedocking
@@ -52,34 +45,10 @@ services:
     depends_on:
       - "registry"
   angular-docker:
-     image: dreambike/angular-app:latest
+     image: dreambike/angular-app:devrick
      container_name: angular-docker-container
      build: ./employeeapp
      ports:
        - "9000:80"
 
     
-    #  mysql:
-#    image: mysql:5.7
-#    container_name: mysql
-#    volumes:
-#    - mysql_data:/var/lib/mysql
-#    environment:
-#      MYSQL_ROOT_PASSWORD: root
-#      MYSQL_DATABASE: keycloak
-#      MYSQL_USER: keycloak
-#      MYSQL_PASSWORD: password
-#  keycloak:
-#    image: quay.io/keycloak/keycloak:latest
-#    container_name: keycloak
-#    environment:
-#      DB_VENDOR: MYSQL
-#      DB_ADDR: http://85.146.20.136/
-#      DB_PORT: 3306
-#      DB_DATABASE: keycloak
-#      DB_USER: keycloak
-#      DB_PASSWORD: keycloak
-#      KEYCLOAK_USER: admin
-#      KEYCLOAK_PASSWORD: admin
-#    ports:
-#      - "127.0.0.1:8282:8080"
