--- a/runtime-discovery/docker-compose.yml
+++ b/runtime-discovery/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   registry:
-    image: dreambike/registry:devrick
+    image: dreambike/registry:latest
     container_name: registry
     expose: 
       - "8761"
   gateway:
-    image: dreambike/gateway:devrick
+    image: dreambike/gateway:latest
     container_name: gateway
     ports:
       - "8181:8760"
@@ -17,35 +17,35 @@ services:
       - docking
       - bikedocking
   bike:
-    image: dreambike/bike:devrick
+    image: dreambike/bike:latest
     container_name: bike
     expose:
       - "8763"
     depends_on:
       - "registry"
   docking:
-    image: dreambike/docking:devrick
+    image: dreambike/docking:latest
     container_name: docking
     expose:
       - "8764"
     depends_on:
       - "registry"
   docking:
-    image: dreambike/docking:devrick
+    image: dreambike/docking:latest
     container_name: docking2
     expose:
       - "8766"
     depends_on:
       - "registry"
   bikedocking:
-    image: dreambike/bikedocking:devrick
+    image: dreambike/bikedocking:latest
     container_name: bikedocking
     expose:
       - "8765"
     depends_on:
       - "registry"
   angular-docker:
-     image: dreambike/angular-app:devrick
+     image: dreambike/angular-app:latest
      container_name: angular-docker-container
      build: ./employeeapp
      ports:
