--- a/runtime-discovery/docker-compose.yml
+++ b/runtime-discovery/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "registry"
   docking:
     image: dreambike/docking:latest
-#    container_name: docking
+    container_name: dockin
     expose:
       - "8764"
     depends_on:
