--- a/runtime-discovery/docker-compose.yml
+++ b/runtime-discovery/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   registry:
-    image: dreambike/registry:latest
+    image: dreambike/registry:devrick
     container_name: registry
     expose: 
       - "8761"
   gateway:
-    image: dreambike/gateway:latest
+    image: dreambike/gateway:devrick
     container_name: gateway
     ports:
       - "8181:8760"
@@ -17,21 +17,21 @@ services:
       - docking
       - bikedocking
   bike:
-    image: dreambike/bike:latest
+    image: dreambike/bike:devrick
     container_name: bike
     expose:
       - "8763"
     depends_on:
       - "registry"
   docking:
-    image: dreambike/docking:latest
+    image: dreambike/docking:devrick
     container_name: docking
     expose:
       - "8764"
     depends_on:
       - "registry"
   bikedocking:
-    image: dreambike/bikedocking:latest
+    image: dreambike/bikedocking:devrick
     container_name: bikedocking
     expose:
       - "8765"
