met prod tag voor frontend app

--- a/runtime-discovery/docker-compose.yml
+++ b/runtime-discovery/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     depends_on:
       - "registry"
   angular-docker:
-     image: dreambike/angular-app:latest
+     image: dreambike/angular-app:prod
      container_name: angular-docker-container
      build: ./employeeapp
      ports:
